# bigsnakelock

./: README.md  example.ipynb  pyproject.toml
.binder/: appendix
.github/workflows/: build-container-image.yml  container-image.yml
container/: appendix  conda-lock.yml
