[project]
name = "bigsnakelock"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "astropy>=7.1.0",
]

[project.optional-dependencies]
container = [
  "bash-kernel>=0.9.3",
]

# [tool.conda-lock.dependencies]
# pyinterp = ">=2025.8.1"

[tool.conda-lock]
default-non-conda-source = "pip"
channels = [
  "conda-forge",
]
platforms = [
  "linux-aarch64",
  "linux-64",
  "osx-arm64",
  "osx-64",
  "win-64",
]
